attempt to make links span their entire table cell

--- a/static/css/packages.css
+++ b/static/css/packages.css
@@ -196,6 +196,12 @@ body {
     font-weight: 700;
 }
 
+#main-list td a {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+}
+
 /* package info */
 
 #package {
