--- a/static/css/packages.css
+++ b/static/css/packages.css
@@ -190,6 +190,7 @@ body {
 #main-list td {
     padding: 0.5em 1em;
     border: 1px solid var(--color-listborder);
+    height: 100%;
 }
 
 #main-list td.version {
