Make documentation tab name consistent with main site

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <li><a href="https://chimera-linux.org/news">News</a></li>
             <li><a href="https://chimera-linux.org/downloads">Downloads</a></li>
             <li><a href="/">Packages</a></li>
-            <li><a href="https://chimera-linux.org/docs">Docs</a></li>
+            <li><a href="https://chimera-linux.org/docs">Documentation</a></li>
             <li><a href="https://chimera-linux.org/community">Community</a></li>
             <li><a href="https://chimera-linux.org/development">Development</a></li>
         </ul>
